derive_tests/tests/compile_fail/modifying_reference.stderr
error: Validify must be implemented for structs with owned data, if you just need validation and not modification, use Validate instead
 --> tests/compile_fail/modifying_reference.rs:7:5
  |
7 |     #[modify(trim, uppercase)]
  |     ^
